examples/errors/ovr_without_guard.jj
func f
with x 
returns x

func f
with x
returns x * 2

func main 
{
    f(1);
}
